--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,25 @@
 <resources>
     <string name="app_name">Vehical Information</string>
+    <string name="price_per_day">Price per day</string>
+    <string name="description">Description</string>
+    <string name="address">Address</string>
+    <string name="select_image">Select Image</string>
+    <string name="add_vehicle">Add Vehicle</string>
+    <string name="vehicle_number">Vehicle Number</string>
+    <string name="update_vehicle">Update Vehicle</string>
+    <string name="password">Password</string>
+    <string name="mobile">Mobile</string>
+    <string name="login">Login</string>
+    <string name="don_t_have_account">Don\'t have account?</string>
+    <string name="register">Register</string>
+    <string name="welcome_user">Welcome, User</string>
+    <string name="loading">loading…</string>
+    <string name="name">Name</string>
+    <string name="vehicle_type">Vehicle Type</string>
+    <string name="description1">Description:</string>
+    <string name="location">Location</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
     <string-array name="spinner_items">
         <item>Car</item>
         <item>Van</item>
